--- a/TheBand/assets/css/style.css
+++ b/TheBand/assets/css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
 }
@@ -24,9 +28,70 @@ body {
 *   kiểu dáng(kiểu dáng,hình tròn, vuông)
 */
 
+
+/*Common*/
+
 .clear {
     clear: both;
 }
+
+.row {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.col {
+    float: left;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.col-3 {
+    width: 33.33333%;
+}
+
+.row::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.col-6 {
+    width: 50%;
+}
+
+.col-12 {
+    width: 100%;
+}
+
+.btn {
+    background: #000000;
+    color: #fff;
+    padding: 11px 16px;
+    outline: none;
+    cursor: pointer;
+    border: none;
+}
+
+.btn:hover {
+    background: #ccc;
+    color: #000;
+}
+
+.text-center {
+    text-align: center!important;
+}
+
+.mt-8 {
+    margin-top: 8px!important;
+}
+
+.mt-16 {
+    margin-top: 16px!important;
+}
+
+
+/*Main*/
 
 #warpper {
     height: 100vh;
@@ -130,6 +195,7 @@ a {
     box-shadow: 0px 4px 4px 4px rgba( 0, 0, 0, 0.2);
     display: none;
     min-width: 160px;
+    background: #fff;
 }
 
 .subnav a {
@@ -159,8 +225,8 @@ a {
 }
 
 .banner #slider {
-    padding-top: 50%;
-    background: url('/assets/img/banner.jpg') top center / cover no-repeat;
+    /* padding-top: 50%;
+    background: url('/assets/img/banner.jpg') top center / cover no-repeat; */
 }
 
 .banner #slider img {}
@@ -194,9 +260,12 @@ img {
 
 #content .content-section {
     width: 800px;
+    max-width: 100%;
     margin: auto;
-    padding: 64px 10px;
+    padding: 64px 0;
     text-align: center;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .content-section .section-heading {
@@ -224,22 +293,15 @@ img {
 
 .band .band-member {
     padding: 32px 0;
-    display: flex;
 }
 
-.band-member .member {
-    width: 33.3333%;
-    text-align: center;
-    height: 100%;
-}
-
-.band-member .member p {
+.band-member .c p {
     font-size: 15px;
 }
 
 .band-member .member img {
     margin-top: 15px;
-    width: 154px;
+    width: 60%;
     border-radius: 4px;
 }
 
@@ -289,20 +351,19 @@ img {
 /*Places Tour*/
 
 .tour .placeTour {
-    margin-top: 32px;
-    display: flex;
-    padding-bottom: 32px;
-    justify-content: space-between;
+    /* display: flex; */
+    margin-top: 16px;
+    margin-bottom: 48px;
+    /* justify-content: space-between; */
 }
 
 .placeTour .tourItem {
-    width: 32%;
-    height: 100%;
+    width: 33.33333%;
 }
 
 .tourItem .placeImg {
     width: 100%;
-    height: 185px;
+    height: 186px;
     display: block;
 }
 
@@ -333,19 +394,238 @@ img {
 }
 
 .tourInfor .buyTicket {
-    background: #000000;
-    color: #fff;
     padding: 11px 16px;
-    outline: none;
     border: none;
     margin-top: 15px;
-    cursor: pointer;
     font-size: 15px;
 }
 
-.buyTicket:hover {
-    background: #ccc;
-    color: #000;
+
+/*
+Contact
+*/
+
+.contact-content {
+    margin-top: 48px;
 }
 
-#footer {}
+.contact-info p {
+    text-align: left;
+    line-height: 1.4;
+    font-size: 18px;
+}
+
+.contact-info p i {
+    width: 30px;
+    display: inline-block;
+}
+
+.contact-form {
+    font-size: 15px;
+}
+
+.form-control {
+    border-radius: 5px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    outline: none;
+    width: 100%;
+}
+
+.buttonSend {
+    float: right;
+}
+
+.buttonSend input[type='submit'] {
+    border: 1px solid #ccc;
+}
+
+
+/*Map section*/
+
+.map {}
+
+#footer {
+    padding: 64px 16px;
+    text-align: center;
+}
+
+.social {
+    font-size: 24px;
+}
+
+.social a,
+.powered a {
+    color: rgba( 0, 0, 0, 0.6);
+}
+
+.social a:hover,
+.powered a:hover {
+    color: rgba( 0, 0, 0, 0.2);
+}
+
+.powered {
+    font-size: 15px;
+    padding-top: 15px;
+    color: rgba( 0, 0, 0, 0.6);
+}
+
+
+/*Modal*/
+
+.modal {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    /* overflow: scroll; */
+    z-index: 3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    padding: 0 16px;
+}
+
+.showmodal {
+    display: flex;
+}
+
+.modal .model {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #000;
+    opacity: 0.4;
+    z-index: 1;
+}
+
+.modal-Ticket {
+    background: #fff;
+    width: 900px;
+    min-height: 200px;
+    position: relative;
+    z-index: 9;
+    margin: 0 auto;
+    animation: modalAnimation .5s linear forwards;
+}
+
+.modal-header {
+    background: #009688;
+    height: 130px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-size: 30px;
+    color: #fff;
+}
+
+.modal-header span {
+    margin-left: 16px;
+    letter-spacing: 4px;
+}
+
+.btnClose {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 10px 14px;
+    cursor: pointer;
+}
+
+.btnClose i {
+    color: #fff;
+    font-size: 25px;
+}
+
+.btnClose:hover i {
+    opacity: 0.6;
+}
+
+.modal-body {
+    padding: 16px;
+}
+
+label.modal-label {
+    display: block;
+    font-size: 15px;
+    margin-bottom: 12px;
+}
+
+input.modal-input {
+    border: 1px solid #ccc;
+    width: 100%;
+    padding: 11px;
+    font-size: 15px;
+    margin-bottom: 24px;
+    outline: none;
+}
+
+input.modal-input:focus {
+    border: 2px solid #009688!important;
+}
+
+.modal-pay .pay {
+    width: 100%;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #009688;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 16px;
+    cursor: pointer;
+    outline: none;
+    border: none;
+}
+
+.modal-pay .pay:hover {
+    opacity: 0.8;
+}
+
+.modal-footer {
+    padding: 16px;
+    text-align: right;
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal-footer a {
+    color: #2196F3;
+}
+
+.closePay {
+    outline: none;
+    background: red;
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    padding: 10px;
+    padding: 8px 16px;
+    cursor: pointer;
+}
+
+.closePay:hover {
+    opacity: 0.6;
+}
+
+.modal-help {
+    padding-top: 5px;
+}
+
+@keyframes modalAnimation {
+    0% {
+        opacity: 0;
+        transform: translateY(-200px);
+    }
+    50% {
+        opacity: 0.5;
+        transform: translateY(-100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
